--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
 <header>
   <h1>Medikart - Products</h1>
   <nav>
-    <a href="login.html">Back to Home</a>
+    <a href="index.html">Back to Home</a>
     <a href="cart.html">View Cart (<span id="cart-count">0</span>)</a>
   </nav>
 </header>
